--- a/manifest.yaml
+++ b/manifest.yaml
@@ -32,3 +32,45 @@ spec:
   type: LoadBalancer
   selector:
     app: grafana 
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: grafana
+spec:
+  entryPoints:
+    - web
+  routes:
+  - match: Host(`grafana.bender.sway.org`) && PathPrefix(`/`)
+    kind: Rule
+    services:
+    - name: gafana
+      port: 3000
+    middlewares:
+    - name: redirect
+
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: securegrafana
+spec:
+  entryPoints:
+    - websecure
+  routes:
+  - match: Host(`grafana.bender.sway.org`) && PathPrefix(`/`)
+    kind: Rule
+    services:
+    - name: gafana
+      port: 3000
+  tls:
+    certResolver: myresolver
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: redirect
+spec:
+  redirectScheme:
+    scheme: https
+    permanent: true
