--- a/manifest.yaml
+++ b/manifest.yaml
@@ -20,6 +20,28 @@ spec:
         image: grafana/grafana
         ports:
         - containerPort: 3000
+        env:
+        - name: GF_SECURITY_ADMIN_USER
+          valueFrom:
+            secretKeyRef:
+              name: grafana
+              key: admin-user
+        - name: GF_SECURITY_ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: grafana
+              key: admin-password
+        livenessProbe:
+          failureThreshold: 10
+          httpGet:
+            path: /api/health
+            port: 3000
+          initialDelaySeconds: 60
+          timeoutSeconds: 30
+        readinessProbe:
+          httpGet:
+            path: /api/health
+            port: 3000
 ---
 apiVersion: v1
 kind: Service
@@ -73,3 +95,12 @@ spec:
   redirectScheme:
     scheme: https
     permanent: true
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: grafana
+type: Opaque
+data:
+  admin-user: "YWRtaW4="
+  admin-password: "ZVZWYndsbE84NTdxRzhmcEJ4RnBNTDZZWTUyUXc2YlNLS2l1N2huQQ=="
