--- a/manifest.yaml
+++ b/manifest.yaml
@@ -18,6 +18,11 @@ spec:
       containers:
       - name: grafana
         image: grafana/grafana
+        imagePullPolicy: IfNotPresent
+        volumeMounts:
+        - name: config
+          mountPath: "/etc/grafana/provisioning/datasources/datasources.yaml"
+          subPath: datasources.yaml
         ports:
         - containerPort: 3000
         env:
@@ -42,6 +47,24 @@ spec:
           httpGet:
             path: /api/health
             port: 3000
+      volumes:
+      - name: config
+        configMap:
+          name: grafana
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana
+data:
+  datasources.yaml: |
+    apiVersion: 1
+    datasources:
+    - access: proxy
+      isDefault: true
+      name: Prometheus
+      type: prometheus
+      url: http://prometheus.prometheus.svc.cluster.local:9090
 ---
 apiVersion: v1
 kind: Service
