--- a/manifest.yaml
+++ b/manifest.yaml
@@ -41,6 +41,11 @@ spec:
             secretKeyRef:
               name: grafana
               key: admin-password
+        - name: GF_INSTALL_PLUGINS
+          valueFrom:
+            configMapKeyRef:
+              name: grafana
+              key: plugins
         livenessProbe:
           failureThreshold: 10
           httpGet:
@@ -65,6 +70,7 @@ kind: ConfigMap
 metadata:
   name: grafana
 data:
+  plugins: grafana-piechart-panel,digrich-bubblechart-panel,grafana-clock-panel
   datasources.yaml: |
     apiVersion: 1
     datasources:
