--- a/configs/grafana/dashboardproviders.yaml
+++ b/configs/grafana/dashboardproviders.yaml
@@ -8,3 +8,24 @@ providers:
     path: /var/lib/grafana/dashboards/default
   orgId: 1
   type: file
+- name: 'teslamate'
+  orgId: 1
+  folder: TeslaMate
+  folderUid: Nr4ofiDZk
+  type: file
+  disableDeletion: false
+  editable: true
+  updateIntervalSeconds: 86400
+  options:
+    path: /var/lib/grafana/dashboards/teslamate
+- name: 'teslamate_internal'
+  orgId: 1
+  folder: Internal
+  folderUid: Nr5ofiDZk
+  type: file
+  disableDeletion: false
+  editable: true
+  updateIntervalSeconds: 86400
+  options:
+    path: /var/lib/grafana/dashboards/teslamate_internal
+
